_sass/components/_syntax.scss
$comment: #999988;
$generic: #999988;
$string: #FF4A58; //#DD1121;
$number: $string;
$inserted: #000;
$name: #25AFD1;
$func: #fe0000;
$tag: #fff;

.highlight .c { color: $comment; font-style: italic } /* Comment */
//.highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
.highlight .cm { color: $comment; font-style: italic } /* Comment.Multiline */
.highlight .cp { color: $generic; } /* Comment.Preproc */
.highlight .c1 { color: $comment; font-style: italic } /* Comment.Single */
.highlight .cs { color: $generic; font-weight: bold; font-style: italic } /* Comment.Special */
.highlight .gd { color: $inserted; background-color: #ffdddd } /* Generic.Deleted */
.highlight .gd .x { color: $inserted; background-color: #ffaaaa } /* Generic.Deleted.Specific */
.highlight .ge { font-style: italic } /* Generic.Emph */
.highlight .gr { color: #aa0000 } /* Generic.Error */
.highlight .gh { color: $generic } /* Generic.Heading */
.highlight .gi { color: $inserted; background-color: #ddffdd } /* Generic.Inserted */
.highlight .gi .x { color: $inserted; background-color: #aaffaa } /* Generic.Inserted.Specific */
.highlight .go { color: #888888 } /* Generic.Output */
.highlight .gp { color: #555555 } /* Generic.Prompt */
.highlight .gu { color: #aaaaaa } /* Generic.Subheading */
.highlight .gt { color: #aa0000 } /* Generic.Traceback */
.highlight .kt { color: #445588; } /* Keyword.Type */
.highlight .m { color: $number; } /* Literal.Number */
.highlight .s { color: $string; } /* Literal.String */
.highlight .na { color: $name; } /* Name.Attribute */
.highlight .nb { color: #0086B3 } /* Name.Builtin */
.highlight .nc { color: $func; } /* Name.Class */
.highlight .no { color: $name; } /* Name.Constant */
.highlight .ni { color: #800080 } /* Name.Entity */
.highlight .ne { color: $func; } /* Name.Exception */
.highlight .nf { color: $func; } /* Name.Function */
.highlight .nn { color: #555555 } /* Name.Namespace */
.highlight .nt { color: $tag; } /* Name.Tag */
.highlight .nv { color: $name; } /* Name.Variable */
.highlight .w { color: #bbbbbb } /* Text.Whitespace */
.highlight .mf { color: $number; } /* Literal.Number.Float */
.highlight .mh { color: $number; } /* Literal.Number.Hex */
.highlight .mi { color: $number; } /* Literal.Number.Integer */
.highlight .mo { color: $number; } /* Literal.Number.Oct */
.highlight .sb { color: $string; } /* Literal.String.Backtick */
.highlight .sc { color: $string; } /* Literal.String.Char */
.highlight .sd { color: $string; } /* Literal.String.Doc */
.highlight .s2 { color: $string; } /* Literal.String.Double */
.highlight .se { color: $string; } /* Literal.String.Escape */
.highlight .sh { color: $string; } /* Literal.String.Heredoc */
.highlight .si { color: $string; } /* Literal.String.Interpol */
.highlight .sx { color: $string; } /* Literal.String.Other */
.highlight .sr { color: #009926 } /* Literal.String.Regex */
.highlight .s1 { color: $string; } /* Literal.String.Single */
.highlight .ss { color: #990073 } /* Literal.String.Symbol */
.highlight .bp { color: $generic } /* Name.Builtin.Pseudo */
.highlight .vc { color: $name; } /* Name.Variable.Class */
.highlight .vg { color: $name; } /* Name.Variable.Global */
.highlight .vi { color: $name; } /* Name.Variable.Instance */
.highlight .il { color: $number; } /* Literal.Number.Integer.Long */

